Fix CSS on mobile Safari

--- a/modules/client/components/Home.css
+++ b/modules/client/components/Home.css
@@ -1,7 +1,3 @@
-html, body, #app {
-  height: 100%;
-}
-
 body {
   margin: 0;
   font: 14px Helvetica, sans-serif;
@@ -17,13 +13,9 @@ a:link:hover {
 }
 
 .home {
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
+  padding-top: 2em;
 }
 .home-content {
-  flex: 1;
 }
 .home-footer {
   padding: 6em 0 3em;
@@ -32,7 +24,7 @@ a:link:hover {
 .react30-logo {
   width: 300px;
   height: 300px;
-  margin: 2em auto 0;
+  margin: 0 auto;
 }
 
 .episode-list {
